--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,3 +40,9 @@ p{
 .card .row{
     display: inline-block;
 }
+
+#demo-carousel img{
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+}
